# qemu-ci

./: .b4-config  Kconfig  Kconfig.host  MAINTAINERS  Makefile  README.md  README.rst  arch_info-target.c  block.c  blockdev-nbd.c  blockdev.c  blockjob.c  build_ci_container.sh  check_avocado_cache.sh  configure  cpu-common.c  cpu-target.c  event-loop-base.c  hmp-commands-info.hx  hmp-commands.hx  iothread.c  job.c  meson.build  meson_options.txt  os-posix.c  page-vary-target.c  precache_tests.sh  push_new_series.sh  qemu-img.c  qemu-io-cmds.c  qemu-keymap.c  qemu-nbd.c  qemu-options.hx  sanitizer.c  target-info.c
.gitlab-ci.d/: base.yml  buildtest-template.yml  buildtest.yml  check-dco.py  check-patch.py  check-units.py  cirrus.yml  container-cross.yml  container-template.yml  containers.yml  crossbuilds.yml  static_checks.yml
accel/: accel-system.c  accel-target.c  accel-user.c
audio/: audio.c  dbusaudio.c  jackaudio.c  pwaudio.c
authz/: listfile.c
backends/: cryptodev-lkcf.c  cryptodev.c  hostmem-epc.c  hostmem-file.c  hostmem-memfd.c  hostmem-ram.c  hostmem-shm.c  hostmem.c  iommufd.c  rng-builtin.c  trace-events
block/: backup.c  blkdebug.c  blkio.c  blklogwrites.c  blkreplay.c  blkverify.c  block-backend.c  block-copy.c  commit.c  copy-before-write.c  crypto.c  crypto.h  file-posix.c  gluster.c  graph-lock.c  io.c  io_uring.c  iscsi.c  linux-aio.c  mirror.c  nfs.c  null.c  nvme.c  parallels.c  qapi-sysemu.c  qapi.c  qcow.c  qcow2.c  qcow2.h  qed.c  quorum.c  raw-format.c  rbd.c  replication.c  snapshot.c  ssh.c  stream.c  throttle-groups.c  vdi.c  vhdx.c  (+3 more)
bsd-user/: bsd-mem.h  main.c  mmap.c  qemu.h  signal.c
chardev/: char-fe.c  char-hub.c  char-mux-be.c  char-mux-fe.c  char-mux.c  char-socket.c  char.c  chardev-internal.h  meson.build
common-user/: meson.build  safe-syscall.c  watchpoint-stub.c
contrib/plugins/: Makefile  bbvgen.c  cache.c  cflow.c  hotblocks.c  ips.c  meson.build  traps.c
crypto/: cipher-nettle.c.inc  hash-gcrypt.c  hash-glib.c  hash.c  hmac-gcrypt.c  pbkdf-gcrypt.c  pbkdf-gnutls.c  pbkdf.c  tlscredsanon.c  tlscredspsk.c  tlscredsx509.c  tlssession.c  x509-utils.c
disas/: Kconfig  disas-common.c  meson.build  riscv.c
docs/: bypass-iommu.txt  conf.py  igd-assign.txt  index.rst
dump/: dump.c
ebpf/: ebpf_rss.c
fpu/: softfloat-parts.c.inc  softfloat-specialize.c.inc  softfloat.c
fsdev/: 9p-iov-marshal.c  file-op-9p.h  meson.build
gdb-xml/: riscv-32bit-virtual.xml  riscv-64bit-virtual.xml
gdbstub/: gdbstub.c  internals.h  syscalls.c  system.c  user-target.c  user.c
hw/: Kconfig  meson.build
hw/arm/svd/: meson.build
hw/uefi/: Kconfig  hardware-info.c  meson.build  var-service-core.c  var-service-isa.c  var-service-json.c  var-service-sysbus.c
include/: glib-compat.h  qemu-main.h
io/: channel-socket.c  channel-tls.c  channel.c  trace-events
linux-user/: elfload.c  fd-trans.c  gen-vdso-elfn.c.inc  linuxload.c  loader.h  main.c  mmap.c  plugin-api.c  qemu.h  signal-common.h  signal.c  strace.c  strace.list  syscall.c  syscall_defs.h  user-internals.h  user-mmap.h
migration/: channel-block.c  channel.c  colo.c  cpr-transfer.c  cpr.c  cpu-throttle.c  dirtyrate.c  meson.build  migration-hmp-cmds.c  migration.c  migration.h  multifd-device-state.c  multifd-nocomp.c  multifd-zero-page.c  multifd-zlib.c  multifd-zstd.c  multifd.c  multifd.h  options.c  options.h  postcopy-ram.c  postcopy-ram.h  qemu-file.c  qemu-file.h  ram.c  ram.h  rdma.c  rdma.h  savevm.c  savevm.h  target.c  threadinfo.c  threadinfo.h  trace-events  vmstate-types.c  vmstate.c
monitor/: hmp-cmds-target.c  hmp-cmds.c  hmp.c  monitor-internal.h  monitor.c  qmp-cmds.c  qmp.c
net/: af-xdp.c  colo-compare.c  net.c  slirp.c  tap-bsd.c  tap-linux.c  tap-linux.h  tap-solaris.c  tap-stub.c  tap-win32.c  tap.c  tap_int.h  vhost-user.c  vhost-vdpa.c
pc-bios/: README  meson.build
plugins/: api.c  core.c  loader.c  meson.build  plugin.h  qemu-plugins.symbols  stubs.c
po/: zh_TW.po
python/: setup.cfg
qapi/: acpi-hest.json  audio.json  block-core.json  block-export.json  block.json  char.json  common.json  crypto.json  (+30 more)
rust/: Cargo.toml  meson.build  wrapper-system.h  wrapper.h
rust/block/: Cargo.toml  README.md  meson.build
rust/block/src/: bochs.rs  driver.rs  iobuffer.rs  lib.rs
rust/bql/src/: cell.rs  lib.rs
rust/hw/char/pl011/: meson.build
rust/hw/char/pl011/src/: device.rs  device_class.rs  lib.rs  memory_ops.rs  registers.rs
rust/hw/timer/hpet/: meson.build
rust/hw/timer/hpet/src/: device.rs  hpet.rs
rust/migration/src/: migratable.rs  vmstate.rs
rust/qemu-api/: .gitignore  Cargo.toml  build.rs  meson.build
rust/qemu-api-macros/: meson.build
rust/qemu-api-macros/src/: device.rs  lib.rs  object.rs  symbols.rs  utilities.rs  vmstate.rs
rust/qemu-api/src/: assertions.rs  bindings.rs  c_str.rs  cell.rs  definitions.rs  device_class.rs  errno.rs  futures.rs  lib.rs  log.rs  objects.rs  offset_of.rs  prelude.rs  qdev.rs  qom.rs  sysbus.rs  tests.rs  vmstate.rs  zeroable.rs
rust/qemu-api/tests/: tests.rs  vmstate_tests.rs
rust/system/src/: memory.rs
subprojects/helper-to-tcg/: README.md  get-llvm-ir.py  meson.build  meson_options.txt
subprojects/helper-to-tcg/include/: CmdLineOptions.h  Error.h  FunctionAnnotation.h  PrepareForOptPass.h  PrepareForTcgPass.h  TcgGlobalMap.h
subprojects/helper-to-tcg/passes/: PseudoInst.cpp  PseudoInst.h  PseudoInst.inc  llvm-compat.cpp  llvm-compat.h
subprojects/helper-to-tcg/passes/PrepareForOptPass/: PrepareForOptPass.cpp
subprojects/helper-to-tcg/passes/PrepareForTcgPass/: CanonicalizeIR.cpp  CanonicalizeIR.h  IdentityMap.cpp  IdentityMap.h  PrepareForTcgPass.cpp  TransformGEPs.cpp  TransformGEPs.h
subprojects/helper-to-tcg/passes/backend/: TcgEmit.cpp  TcgEmit.h  TcgGenPass.cpp  TcgGenPass.h  TcgTempAllocationPass.cpp  TcgTempAllocationPass.h  TcgType.h
subprojects/helper-to-tcg/pipeline/: Pipeline.cpp
subprojects/helper-to-tcg/tests/: cpustate.c  ldst.c  meson.build  scalar.c  tcg-global-mappings.h  vector.c
tests/functional/ppc/: meson.build
tests/migration/: meson.build
(+1962 files in other folders)
