# SPDX-License-Identifier: GPL-2.0-or-later

test_ppc_timeouts = {
  '40p' : 240,
}

tests_ppc_system_quick = [
  'migration',
  '74xx',
]

tests_ppc_system_thorough = [
  # '40p', # timeout
  # 'amiga', # asset can't be downloaded
  'bamboo',
  'mac',
  'mpc8544ds',
  # 'ppe42', # Assertion `!temp_readonly(ots)'
  'replay',
  'sam460ex',
  'tuxrun',
  'virtex_ml507',
]
